--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,262 @@
-<p>user works!</p>
+<div class="container">
+    <div class="row mb-2 mt-2 text-center">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <h5>User Management Portal</h5>
+            <small *ngIf="titleAction$ | async as title">{{ title }}</small>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+    <!-- navigation bar-->
+    <nav class="navbar navbar-expand-md breadcrumb">
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="nav nav-pills">
+                <a class="nav-item nav-link active ml-1" (click)="changeTitle('Users')" data-toggle="tab" href="#users">
+                    <i class="fa fa-users"></i>
+                    Users
+                </a>
+                <a class="nav-item nav-link ml-3" (click)="changeTitle('Settings')" data-toggle="tab" href="#reset-password">
+                    <i class="fa fa-cogs"></i>
+                    Settings
+                </a>
+                <a class="nav-item nav-link move-right mr-3" (click)="changeTitle('Profile')" data-toggle="tab" href="#profile">
+                    Welcome,
+                    <i class="fa fa-user"></i>
+                </a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- main content -->
+    <div class="tab-content mb-3" id="myTabContent">
+        <!-- user table -->
+        <div class="tab-pane fade show active" id="users">
+            <div class="mb-3 float-right">
+                <div class="btn-group mr-2">
+                    <form class="form-inline my-2 my-lg-0 justify-content-center">
+                        <input name="searchTerm" #searchInput="ngModel" class="form-control mr-sm-2" ngModel
+                        (ngModelChange)="searchUsers(searchInput.value)" type="search" placeholder="Search users...">
+                    </form>
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addUserModal">
+                        <i class="fa fa-plus"></i>New User
+                    </button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" (click)="getUsers(true)" class="btn btn-info">
+                        <i *ngIf="refreshing" class="fas fa-sync fa-spin"></i>
+                        <i *ngIf="!refreshing" class="fas fa-sync"></i>
+                    </button>
+                </div>
+            </div>
+            <table class="table table-hover">
+                <thead class="table-borderless">
+                    <tr class="text-center">
+                        <th>UserID</th>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody  *ngFor="let appUser of users">
+                    <tr class="text-center">
+                        <td (click)="onSelectUser(appUser)">{{appUser?.user_id}}</td>
+                        <td (click)="onSelectUser(appUser)">{{appUser?.username}}</td>
+                        <td (click)="onSelectUser(appUser)">{{appUser?.email}}</td>
+                        <td>
+                            <span *ngIf="appUser.isActive" class="badge badge-success">Active</span>
+                            <span *ngIf="!appUser.isActive" class="badge badge-danger">Inactive</span>
+                        </td>
+                        <td class="">
+                            <div class="btn-group">
+                                <button class="btn btn-outline-info" (click)="onEditUser(appUser)">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                                <button class="btn btn-outline-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+                <button [hidden]="true" type="button" id="openUserInfo" data-toggle="modal" data-target="#viewUserModal"></button>
+                <button [hidden]="true" type="button" id="openUserEdit" data-toggle="modal" data-target="#editUserModal"></button>
+
+                <!-- modal user info -->
+                <div class="modal fade bd-example-modal-lg" id="viewUserModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title text-center" id="exampleModalLongTitle">User Informations</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div>
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-12 col-sm-auto">
+                                                    <div class="mx-auto" style="width: 100px;">
+                                                        <div class="d-flex justify-content-center align-items-center rounded">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col d-flex flex-column flex-sm-row justify-content-between">
+                                                    <div class="text-center text-sm-left mb-sm-0">
+                                                        <h6 class="pt-sm-2 pb-1 mb-0 text-nowrap">{{selectedUser?.username}}</h6>
+                                                        <div class="">Status:
+                                                            <span *ngIf="selectedUser?.isActive" class="badge badge-success"> Active</span>
+                                                            <span *ngIf="!selectedUser?.isActive" class="badge badge-danger"> Inactive</span>
+                                                        </div>
+                                                        <div class="text-muted">
+                                                            <small>Last Login: {{selectedUser?.lastLoginDateDisplay | date: 'medium'}}</small>
+                                                        </div>
+                                                    </div>
+                                                    <div class="text-center text-sm-right">
+                                                        <div class="text-muted">
+                                                            <small>Joined {{selectedUser?.joinDate | date: 'medium'}}</small>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item"></li>
+                                            <li class="list-group-item">
+                                                <i class="fa fa-id-badge float-right"></i>User ID : {{selectedUser?.user_id}}
+                                            </li>
+                                            <li class="list-group-item"></li>
+                                            <li class="list-group-item">
+                                                <i class="fa fa-envelope float-right"></i>Email : {{selectedUser?.email}}
+                                            </li>
+                                            <li class="list-group-item"></li>
+                                            <li class="list-group-item">
+                                                <i class="fas fa-shield-alt float-right"></i>Role : {{selectedUser?.role.substring(5)}}
+                                            </li>
+                                            <li class="list-group-item"></li>
+                                            <li *ngIf="selectedUser?.lastLoginDateDisplay" class="list-group-item">
+                                                <i class="fas fa-sign-in-alt float-right"></i>Last Seen : {{selectedUser?.lastLoginDateDisplay | date: 'medium'}}
+                                            </li>
+                                            <li class="list-group-item">
+                                                <span *ngIf="selectedUser?.isNotLocked" >
+                                                    <i class="fa fa-lock float-right" style="color: rgb(202, 19, 49);"></i>Account Locked
+                                                </span>
+                                                <span *ngIf="!selectedUser?.isNotLocked" >
+                                                    <i class="fa fa-unlock float-right" style="color: rgb(27, 129, 82);"></i>Account Not Locked
+                                                </span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </table>
+        </div>
+    </div>
+    <!-- model add user -->
+    <div class="modal draggable fade bd-example-modal-lg" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center">New User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <form #newUserForm="ngForm" (ngSubmit)="onAddNewUser(newUserForm)">
+                            <div class="form-group">
+                                <label for="username">Username</label>
+                                <input type="text" name="username" required ngModel class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" required ngModel class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="authority">Role</label>
+                                <select name="role" required ngModel="ROLE_USER" class="form-control">
+                                    <option value="ROLE_USER">USER</option>
+                                    <option value="ROLE_ADMIN">ADMIN</option>
+                                </select>
+                            </div>
+                            <fieldset class="form-group">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="isActive" ngModel class="form-check-input" >Active
+                                    </label>
+                                </div>
+                                <div class="form-check disabled">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="isNotLocked" ngModel class="form-check-input" >Unlocked
+                                    </label>
+                                </div>
+                            </fieldset>
+                            <button type="submit" style="display: none;" id="new-user-save"></button>
+                        </form>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="new-user-close">Close</button>
+                    <button type="button" (click)="saveNewUser()" [disabled]="newUserForm.invalid" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- modal edit user -->
+    <div class="modal draggable fade bd-example-modal-lg" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center">Edit {{editUser?.username}}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <form #editUserForm="ngForm">
+                            <div class="form-group">
+                                <label for="username">Username</label>
+                                <input type="text" name="username" required [(ngModel)]="editUser.username" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" required [(ngModel)]="editUser.email" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="authority">Role</label>
+                                <select name="role" required [(ngModel)]="editUser.role" class="form-control">
+                                    <option value="ROLE_USER">USER</option>
+                                    <option value="ROLE_ADMIN">ADMIN</option>
+                                </select>
+                            </div>
+                            <fieldset class="form-group">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="isActive" [(ngModel)]="editUser.isActive" class="form-check-input" >Active
+                                    </label>
+                                </div>
+                                <div class="form-check disabled">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="isNotLocked" [(ngModel)]="editUser.isNotLocked" class="form-check-input" >Unlocked
+                                    </label>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeEditUserModalButton">Close</button>
+                    <button type="button" (click)="onUpdateUser()" [disabled]="editUserForm.invalid" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
